--- a/app/assets/stylesheets/design.css.scss
+++ b/app/assets/stylesheets/design.css.scss
@@ -70,11 +70,11 @@ body {
 	margin-top: 20px;
 	font-size: 15px;
 	img {
-		margin-bottom: 20px;
+		margin-bottom: 15px;
 	}
 }
 
-#headline {
+.headline {
 	font-size: 30px;
 	font-weight: 400;
 }
