add white space on landing page

--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -27,7 +27,7 @@
 						= link_to "What if I don't have a Google account?", no_google_path, class: 'orange-text'
 	%hr{style: "margin-top: 0;"}
 	.row.features
-		%h3.center{style: "margin: 0 0 20px 0;"}
+		%h3.center{style: "margin: 20px 0 40px 0;"}
 			Planning activities with friends on Jupiter is easy
 		.span3.feature
 			%h4.center.teal	Link your calendars
