--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -31,7 +31,7 @@
           .well
             You have not sent any invitations yet!
       %div{style: 'margin: 10px 0;'}
-        = link_to "Check out Jupiter's Features", signout_path, class: "btn btn-warning pull-right", id: "send-invites"
-        = link_to "Invite more friends", '/invite_friends', class: 'btn pull-right', style: "margin-right: 15px;"
-        = link_to "Questions? Email us at hello@getjupiterapp.com", "mailto:hello@jupiterapp.com", class: "btn btn-link orange-text pull-right"
+        = link_to "Check out Jupiter's Features", signout_path, class: "btn btn-warning pull-right", id: "send-invites", onclick: "_gaq.push(['_trackEvent', 'Invites', 'Click', 'ViewFeatures']);"
+        = link_to "Invite more friends", '/invite_friends', class: 'btn pull-right', style: "margin-right: 15px;", onclick: "_gaq.push(['_trackEvent', 'Invites', 'Click', 'InviteMoreFriends']);"
+        = link_to "Questions? Email us at hello@getjupiterapp.com", "mailto:hello@jupiterapp.com", class: "btn btn-link orange-text pull-right", onclick: "_gaq.push(['_trackEvent', 'Invites', 'Click', 'EmailJupiter']);"
         .clearfix
